# audio_video_study_on_ffmpeg_sdl

./: .gitignore  README.en.md  README.md
samples/: 3-44100_s32le_2.pcm  4-48000_f32le_1.pcm  44100_s16le_2_new.pcm  48000_s32le_1.pcm
study/01-hello_qt/: CMakeLists.txt  main.cpp  mainwindow.ui
study/01-test/: CMakeLists.txt  main.cpp  mainwindow.ui
study/02-ffmpeg-audio-cap/: CMakeLists.txt  audio_device_ffmpeg.cpp  audio_device_ffmpeg.h  main.cpp  mainwindow.cpp
study/02-hello_ffmpeg/: CMakeLists.txt  main.cpp  mainwindow.cpp
study/03-qt-base/: 02-ffmpeg-audio-cap - 快捷方式.lnk  CMakeLists.txt
study/03-qt-test/: CMakeLists.txt
study/04-sdl-test/: CMakeLists.txt  mainwindow.h  playthread.cpp
study/04-sdl_play_wav/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
study/05-audio-resample/: CMakeLists.txt  audiothread.cpp  ffmpegs.cpp  ffmpegs.h  mainwindow.cpp  mainwindow.ui
study/06-audio-encode-aac/: CMakeLists.txt  ffmpegs.cpp
study/07-audio-decode-aac/: CMakeLists.txt  audiothread.cpp  ffmpegs.cpp
